early greenway mode
I think this works to create a greenway-specific assistant (including a fix to the excessive creation of assistants) and process greenway footage for comparison against the professional assessments

--- a/.gitignore
+++ b/.gitignore
@@ -185,3 +185,10 @@ pipeline_timing_log.txt
 /unprocessed_photos
 .gpx
 .kml
+greenway_geojsons/telemetry_20250327_11_46.geojson
+*.bin
+temp_metadata.00.bin
+temp_metadata.gpx
+temp_metadata.csv
+temp_metadata.kml
+temp_metadata.csv
