--- a/.gitignore
+++ b/.gitignore
@@ -184,15 +184,22 @@ unprocessed_photos
 .gpx
 .kml
 greenway_geojsons/telemetry_20250327_11_46.geojson
-temp_metadata.00.bin
+*/temp_metadata.00.bin
 temp_metadata.gpx
 temp_metadata.csv
 temp_metadata.kml
 temp_metadata.csv
 *.geojson
 *.bin
+*.csv
 *.jpg
 *.mp4
+*.*.bin
 unprocessed_greenway_videos
 GPX_files
 aggregated_geojsons.json
+temp_metadata.*
+*.bin
+*.csv
+*.gpx
+*.kml
