--- a/requirements.txt
+++ b/requirements.txt
@@ -1,89 +1,117 @@
-<<<<<<< Updated upstream
 annotated-types==0.7.0
 anyio==4.9.0
+appnope==0.1.4
+arcgis==2.4.1.1
+asttokens==3.0.0
 attrs==25.3.0
 blinker==1.9.0
 box-sdk-gen==1.15.0
 boxsdk==3.14.0
+cachetools==6.1.0
 certifi==2025.6.15
 cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.2.1
+cloudpickle==3.1.1
+comm==0.2.2
+contourpy==1.3.2
 cryptography==45.0.4
+cycler==0.12.1
+dask==2024.12.1
+dask-expr==1.1.21
+debugpy==1.8.13
+decorator==5.2.1
 distro==1.9.0
+dotenv==0.9.9
+executing==2.2.0
 Flask==3.1.1
+fonttools==4.58.5
+fsspec==2025.5.1
 geojson==3.2.0
+geomet==1.1.0
 geopandas==1.1.0
 gopro2gpx @ git+https://github.com/juanmcasillas/gopro2gpx@794b972ede14e581dafda5ba82a89c06ac45cf02
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
+ipykernel==6.29.5
+ipython==9.0.2
+ipython_pygments_lexers==1.1.1
 isodate==0.7.2
 itsdangerous==2.2.0
+jaraco.classes==3.4.0
+jaraco.context==6.0.1
+jaraco.functools==4.2.1
+jedi==0.19.2
 Jinja2==3.1.6
 jiter==0.10.0
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+keyring==25.6.0
+kiwisolver==1.4.8
+locket==1.0.0
 lxml==5.4.0
 MarkupSafe==3.0.2
+matplotlib==3.10.3
+matplotlib-inline==0.1.7
 more-itertools==10.7.0
-numpy==2.3.1
+nest-asyncio==1.6.0
+networkx==3.5
+numpy==1.26.4
+oauthlib==3.3.1
 openai==1.91.0
+openvino==2025.0.0
+openvino-telemetry==2024.1.0
 packaging==25.0
-pandas==2.3.0
+pandas==2.2.3
+parso==0.8.4
+partd==1.4.2
+pexpect==4.9.0
 pillow==11.2.1
 platformdirs==4.3.8
+prompt_toolkit==3.0.50
+psutil==7.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+puremagic==1.29
+pyarrow==16.1.0
 pycparser==2.22
 pydantic==2.11.7
 pydantic_core==2.33.2
+Pygments==2.19.2
 PyJWT==2.10.1
+pylerc==4.0
 pyogrio==0.11.0
+pyparsing==3.2.3
 pyproj==3.7.1
+pyspnego==0.11.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 pytz==2025.2
+PyYAML==6.0.2
+pyzmq==26.3.0
 requests==2.32.4
 requests-file==2.1.0
+requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
 setuptools==80.9.0
 shapely==2.1.1
 simple-salesforce==1.12.6
 six==1.17.0
 sniffio==1.3.1
+stack-data==0.6.3
+toolz==1.0.0
+tornado==6.4.2
 tqdm==4.67.1
+traitlets==5.14.3
+truststore==0.10.1
 typing-inspection==0.4.1
 typing_extensions==4.14.0
 tzdata==2025.2
+ujson==5.10.0
 urllib3==2.5.0
+wcwidth==0.2.13
+websocket-client==1.8.0
 Werkzeug==3.1.3
 zeep==4.3.1
-=======
-appnope==0.1.4
-asttokens==3.0.0
-comm==0.2.2
-debugpy==1.8.13
-decorator==5.2.1
-executing==2.2.0
-ipykernel==6.29.5
-ipython==9.0.2
-ipython_pygments_lexers==1.1.1
-jedi==0.19.2
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-matplotlib-inline==0.1.7
-nest-asyncio==1.6.0
-numpy==2.2.4
-openvino==2025.0.0
-openvino-telemetry==2024.1.0
-packaging==24.2
-parso==0.8.4
-pexpect==4.9.0
-pillow==11.2.1
-prompt_toolkit==3.0.50
-ptyprocess==0.7.0
-pure_eval==0.2.3
-pyzmq==26.3.0
-stack-data==0.6.3
-tornado==6.4.2
-traitlets==5.14.3
-wcwidth==0.2.13
->>>>>>> Stashed changes
